fix an old bit of accidentally broken CSS

--- a/application/FSPOC-WebProject/Content/scss/Common.scss
+++ b/application/FSPOC-WebProject/Content/scss/Common.scss
@@ -287,8 +287,7 @@ body.adminLayout #appNotificationArea {
         margin-left: 35px;
         width: auto;
         td:first-child {
-            width: 3px;
-            height:300px;
+            width: 300px;
         }
         td:nth-child(2) {
             width: 400px;
